// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/comment/demo/basic.md correctly 1`] = `
<div
  class="ant-comment"
>
  <div
    class="ant-comment-inner"
  >
    <div
      class="ant-comment-header"
    >
      <span
        class="ant-comment-header-avatar"
      >
        <span
          class="ant-avatar ant-avatar-circle ant-avatar-image"
        >
          <img
            alt="Han Solo"
            src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
          />
        </span>
      </span>
      <div
        class="ant-comment-header-author"
      >
        <span
          class="ant-comment-header-author-name"
        >
          <a>
            Han Solo
          </a>
        </span>
        <span
          class="ant-comment-header-author-time"
        >
          a few seconds ago
        </span>
      </div>
    </div>
    <div
      class="ant-comment-content"
    >
      <div
        class="ant-comment-content-detail"
      >
        <p>
          Sagittis id consectetur purus ut faucibus pulvinar elementum integer enim. Pellentesque massa placerat duis ultricies lacus sed turpis. Tempus urna et pharetra pharetra massa massa.
        </p>
      </div>
      <ul
        class="ant-comment-actions"
      >
        <li>
          <span>
            <span>
              <i
                class="anticon anticon-like"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="like"
                  fill="currentColor"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M885.9 533.7c16.8-22.2 26.1-49.4 26.1-77.7 0-44.9-25.1-87.4-65.5-111.1a67.67 67.67 0 0 0-34.3-9.3H572.4l6-122.9c1.4-29.7-9.1-57.9-29.5-79.4A106.62 106.62 0 0 0 471 99.9c-52 0-98 35-111.8 85.1l-85.9 311h-.3v428h472.3c9.2 0 18.2-1.8 26.5-5.4 47.6-20.3 78.3-66.8 78.3-118.4 0-12.6-1.8-25-5.4-37 16.8-22.2 26.1-49.4 26.1-77.7 0-12.6-1.8-25-5.4-37 16.8-22.2 26.1-49.4 26.1-77.7-.2-12.6-2-25.1-5.6-37.1zM112 528v364c0 17.7 14.3 32 32 32h65V496h-65c-17.7 0-32 14.3-32 32z"
                  />
                </svg>
              </i>
              <span
                style="padding-left:8px;cursor:auto"
              >
                0
              </span>
            </span>
          </span>
        </li>
        <li>
          <span>
            <span>
              <i
                class="anticon anticon-dislike"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="dislike"
                  fill="currentColor"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M885.9 490.3c3.6-12 5.4-24.4 5.4-37 0-28.3-9.3-55.5-26.1-77.7 3.6-12 5.4-24.4 5.4-37 0-28.3-9.3-55.5-26.1-77.7 3.6-12 5.4-24.4 5.4-37 0-51.6-30.7-98.1-78.3-118.4a66.1 66.1 0 0 0-26.5-5.4H273v428h.3l85.8 310.8C372.9 889 418.9 924 470.9 924c29.7 0 57.4-11.8 77.9-33.4 20.5-21.5 31-49.7 29.5-79.4l-6-122.9h239.9c12.1 0 23.9-3.2 34.3-9.3 40.4-23.5 65.5-66.1 65.5-111 0-28.3-9.3-55.5-26.1-77.7zM112 132v364c0 17.7 14.3 32 32 32h65V100h-65c-17.7 0-32 14.3-32 32z"
                  />
                </svg>
              </i>
              <span
                style="padding-left:8px;cursor:auto"
              >
                0
              </span>
            </span>
          </span>
        </li>
        <li>
          <span>
            <span>
              Reply to
            </span>
          </span>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`renders ./components/comment/demo/list.md correctly 1`] = `
<div
  class="ant-list comment-list ant-list-split"
>
  <div
    class="ant-list-header"
  >
    2 replies
  </div>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="ant-list-item"
      >
        <div
          class="ant-list-item-content ant-list-item-content-single"
        >
          <div
            class="ant-comment"
          >
            <div
              class="ant-comment-inner"
            >
              <div
                class="ant-comment-header"
              >
                <span
                  class="ant-comment-header-avatar"
                >
                  <img
                    src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
                  />
                </span>
                <div
                  class="ant-comment-header-author"
                >
                  <span
                    class="ant-comment-header-author-name"
                  >
                    Han Solo
                  </span>
                  <span
                    class="ant-comment-header-author-time"
                  >
                    a day ago
                  </span>
                </div>
              </div>
              <div
                class="ant-comment-content"
              >
                <div
                  class="ant-comment-content-detail"
                >
                  <p>
                    Nisl nisi scelerisque eu ultrices vitae auctor eu augue. Nulla at volutpat diam ut venenatis tellus in metus vulputate.
                  </p>
                </div>
                <ul
                  class="ant-comment-actions"
                >
                  <li>
                    <span>
                      <span>
                        Reply to
                      </span>
                    </span>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-list-item"
      >
        <div
          class="ant-list-item-content ant-list-item-content-single"
        >
          <div
            class="ant-comment"
          >
            <div
              class="ant-comment-inner"
            >
              <div
                class="ant-comment-header"
              >
                <span
                  class="ant-comment-header-avatar"
                >
                  <img
                    src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
                  />
                </span>
                <div
                  class="ant-comment-header-author"
                >
                  <span
                    class="ant-comment-header-author-name"
                  >
                    Stormtrooper
                  </span>
                  <span
                    class="ant-comment-header-author-time"
                  >
                    2 days ago
                  </span>
                </div>
              </div>
              <div
                class="ant-comment-content"
              >
                <div
                  class="ant-comment-content-detail"
                >
                  <p>
                    Sed turpis tincidunt id aliquet risus feugiat in ante metus. Faucibus nisl tincidunt eget nullam non.
                  </p>
                </div>
                <ul
                  class="ant-comment-actions"
                >
                  <li>
                    <span>
                      <span>
                        Reply to
                      </span>
                    </span>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
